fix(ui): update prose text color for improved readability
Former-commit-id: abbccd6c4fea6aa9b434b9500a42b1423355d686 [formerly 8c65c4c12432d3dab2f14140c0735f2163ade594] [formerly e35bc9415d8fa45b00cd816e1e50732c656dca50 [formerly ebf12036fff987b2fdd94eb2c94167a8eb3efcf8]]
Former-commit-id: c47a56c45e9fc9cc706442276141efb14be09611 [formerly 4bd8053e17539756a54d3ad1a8fb3566615fd9ca]
Former-commit-id: 2860d56c0f300c60167b2df78ad3abd3bd317d12

--- a/packages/lifeforge-ui/src/styles/prose.css
+++ b/packages/lifeforge-ui/src/styles/prose.css
@@ -12,7 +12,7 @@
 
 .prose {
   & * {
-    @apply text-bg-800 dark:text-bg-100 my-0 leading-normal select-text;
+    @apply text-bg-600 dark:text-bg-400 my-0 leading-normal select-text;
   }
 
   & :is(h1, h2, h3, h4, h5, h6) {
